--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 #header {
     grid-area: head;
     /* display:flex; */
-    background-image: url('Assets/CAMO.jpg');
+    background-image: url('Assets/camo-cropped.jpg');
     z-index: 5;
     -webkit-box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.49);
     -moz-box-shadow:    0px 3px 5px rgba(100, 100, 100, 0.49);
